# zoin

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE  README.md  compile.bat  package-lock.json  package.json  tsup.config.ts
lib/: app.cc  app.h
src/: bindings.ts  functions.ts  index.ts
test/: index.js  package-lock.json  package.json
